--- a/zalo-mini-app/index_backup.html
+++ b/zalo-mini-app/index_backup.html
@@ -80,7 +80,7 @@
             <div class="text-center mb-8 fade-in">
                 <div class="bg-white bg-opacity-30 p-6 rounded-3xl mb-6 shadow-lg">
                     <div class="bg-white p-4 rounded-full w-20 h-20 mx-auto mb-4 flex items-center justify-center shadow-md">
-                        <img src="boost.png" alt="V-AI Logo" class="min-w-20 min-h-20 mt-8">
+                        <img src="boost.png" alt="V-AI Logo" class="w-full h-full object-cover ">
                     </div>
                     <h1 class="text-3xl font-bold text-gray-800 mb-3">V-AI</h1>
                     <p class="text-gray-700 text-lg mb-2">Dễ hiểu - Dễ dùng - Dễ ứng dụng</p>
